Fixed dropdown being unreadable

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -29,6 +29,10 @@ body {
 	}
 }
 
+.dropdown-menu {
+	background-color: transparent;
+}
+
 .keyvisual {
 	background-image: $header-image;
 	background-position: center;
